[tool.poetry]
name = "poetry-relax"
version = "0.0.0"
repository = "https://github.com/madkinsz/poetry-relax"
description = "Plugin for Poetry to relax upper version pins"
authors = ["Zanie <contact@zanie.dev>"]
readme = "README.md"
keywords = ["poetry", "plugin", "versioning", "version"]
packages = [{ include = "poetry_relax", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2"

[tool.poetry.plugins."poetry.application.plugin"]
relax = "poetry_relax:RelaxPlugin"

[tool.poetry.group.dev.dependencies]
black = ">=7.1.3"
isort = ">=2.5.0"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
