
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
line_length = 88  # corresponds to -w  flag
profile = "black"

[tool.mypy]
cache_dir = "var/cache/mypy"
mypy_path = ["src", "tests"]

[tool.poetry]
name = "poetry-relax"
version = "0.0.0"
repository = "https://github.com/madkinsz/poetry-relax"
description = "Plugin for Poetry to relax upper version pins"
authors = ["Zanie <contact@zanie.dev>"]
readme = "README.md"
keywords = ["poetry", "plugin", "versioning", "version"]
packages = [{ include = "poetry_relax", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = ">=1.2"

[tool.poetry.group.dev.dependencies]
black = ">=7.1.3"
isort = ">=2.5.0"
mypy = ">=0.971"
pytest = ">=7.1.3"
pytest-xdist = ">=2.5.0"

[tool.poetry.plugins."poetry.application.plugin"]
relax = "poetry_relax:RelaxPlugin"

[tool.pytest.ini_options]
addopts = "--junit-xml='var/coverage/pytest.xml'"
cache_dir = "var/cache/pytest"
testpaths = ["tests"]
